remp etienne par morgane

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     {{ partial "includes" . }}
-    <title>{{ .Title }} - Etienne Bouteillé</title>
+    <title>{{ .Title }} - Morgane Siau</title>
   </head>
   <body>
     {{ partial "header" .}}
