--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     {{ partial "includes" . }}
-    <title>Etienne Bouteillé</title>
+    <title>Morgane Siau</title>
   </head>
   <body>
     {{ partial "header" . }}
