--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <div id="logo">
     <h1>
-            <a href="{{ .Site.BaseURL }}">Etienne <strong>Bouteillé</strong></a>
+            <a href="{{ .Site.BaseURL }}">Morgane <strong>Siau</strong></a>
     </h1>
 </div>
