ajouté les collaborations dans la description

--- a/layouts/shortcodes/description.html
+++ b/layouts/shortcodes/description.html
@@ -2,6 +2,9 @@
     <p><strong>{{ .Page.Title }} ({{ .Page.Params.year }})</strong>, {{ .Page.Params.type }}</p>
     <p>{{ .Page.Params.material }}</p>
 
+    {{ if isset .Page.Params "collaboration" }}
+        <p>Collaboration : {{ .Page.Params.collaboration }}</p>
+    {{ end }} 
 <!---    {{ if isset .Page.Params "dimensions" }}
         <p>{{ .Page.Params.dimensions }}</p>
     {{ end }} --->
